--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Vue</title>
+  <title>Yoyo Tube</title>
 
   <!-- CSS -->
   <link rel="stylesheet" href="components/bootstrap/dist/css/bootstrap.min.css">
@@ -20,55 +20,18 @@
   </nav>
 
   <!-- main body of our application -->
-  <div class="container" id="events">
-
-    <!-- add an event form -->
-    <div class="col-sm-6">
-      <div class="panel panel-default">
-
-        <div class="panel-heading">
-		  <h3>Add an Event</h3>
-		</div>
-
-		<div class="panel-body">
-
-		  <div class="form-group">
-		    <input class="form-control" placeholder="Event Name" v-model="event.name">
-		  </div>
-
-		  <div class="form-group">
-		    <textarea class="form-control" placeholder="Event Description" v-model="event.description"></textarea>
-		  </div>
-
-		  <div class="form-group">
-		    <input type="date" class="form-control" placeholder="Date" v-model="event.date">
-		  </div>
-
-		  <button class="btn btn-primary" @click="addEvent">Submit</button>
-
-		</div>
-
-      </div>
-    </div>
+  <div class="container" id="videos">
 
     <!-- show the events -->
     <div class="col-sm-6">
+    	<input type="text" v-model="term" placeholder="Search" debounce="500">
       	<div class="list-group">
 
-			<a href="#" class="list-group-item" v-for="event in events">
+			<a href="#" class="list-group-item" v-for="video in videos">
 				<h4 class="list-group-item-heading">
 					<i class="glyphicon glyphicon-bullhorn"></i> 
-					{{ event.name }}
+					{{ video.snippet.title }}
 				</h4>
-
-				<h5>
-					<i class="glyphicon glyphicon-calendar" v-if="event.date"></i> 
-					{{ event.date }}
-				</h5>
-
-				<p class="list-group-item-text" v-if="event.description">{{ event.description }}</p>
-
-				<button class="btn btn-xs btn-danger" @click="deleteEvent($index)">Delete</button>
 			</a>
 
 		</div>
