--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,11 @@
 <!doctype html>
 <html>
 <head>
-  	<meta charset="utf-8">
+	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
- 	 <title>Yoyo Tube</title>
+	<title>Yoyo Tube</title>
 
 	<!-- CSS / JS -->
 	<link rel="stylesheet" href="components/bootstrap/dist/css/bootstrap.min.css">
@@ -22,48 +22,46 @@
 
 		<div class="masthead clearfix">
 			<div class="inner">
-			  <h3 class="masthead-brand">YOYOTUBE</h3>
-			  <nav>
-			    <ul class="nav masthead-nav">
-			      <li class="active"><a href="#">Search</a></li>
-			      <li><a href="#">Random</a></li>
-			      <li><a href="#">Trending</a></li>
-			    </ul>
-			  </nav>
+				<h3 class="masthead-brand">YOYOTUBE</h3>
+				<nav>
+					<ul class="nav masthead-nav">
+						<li class="active"><a href="#">Search</a></li>
+						<li><a href="#">Random</a></li>
+						<li><a href="#">Trending</a></li>
+					</ul>
+				</nav>
 			</div>
 		</div>
 
-		<div class="inner">
+		<div class="inner content">
 			<h1 class="cover-heading">YOYOTUBE.</h1>
-			<p class="lead">The best of Youtube.</p>
-			<p class="lead">
-			  <input type="text" v-model="term" placeholder="Search" debounce="500">
-			</p>
+			<h3>The best of Youtube.</h3>
+			
+			<div class="input-group form-yt">
+				<input type="text" v-model="term" placeholder="Search" debounce="500" class="form-control">
+			</div><!-- /input-group -->
+
+			<div class="row content-videos">
+				<div class="col-md-4" v-for="video in videos">
+					<a href="https://www.youtube.com/watch?v={{ video.id.videoId }}" target="_blank">
+						<img :src="video.snippet.thumbnails.medium.url" class="img-video">
+					</a>
+				</div>
+			</div>
 		</div>
-
-	  	<div>
-			<a href="https://www.youtube.com/watch?v={{ video.id.videoId }}" v-for="video in videos" target="_blank">
-				<h4>
-					{{ video.snippet.title }}
-				</h4>
-			</a>
-
-		</div>
-
-
 
 		<div class="mastfoot">
 			<div class="inner">
-			  <p>Made with Youtube API, <a href="http://getbootstrap.com">Bootstrap</a>, <a href="http://strapi.io">Strapi</a> and <a href="http://vuejs.org">Vue.js</a> by <a href="https://twitter.com/superskully">Maxou</a>.</p>
+				<p>Made with Youtube API, <a href="http://getbootstrap.com">Bootstrap</a>, <a href="http://strapi.io">Strapi</a> and <a href="http://vuejs.org">Vue.js</a> by <a href="https://twitter.com/superskully">Maxou</a>.</p>
 			</div>
 		</div>
 
-    </div>
-  
+	</div>
 
-  <!-- JS -->
-  <script src="components/vue/dist/vue.js"></script>
-  <script src="components/vue-resource/dist/vue-resource.js"></script>
-  <script src="app.js"></script>
+
+	<!-- JS -->
+	<script src="components/vue/dist/vue.js"></script>
+	<script src="components/vue-resource/dist/vue-resource.js"></script>
+	<script src="app.js"></script>
 </body>
 </html>
